--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -75,7 +75,7 @@
 
   <br>
   <br>
-    <a class="uk-button uk-button-default" href="#modal-center2" uk-toggle href="/series/listado">Ver Reseñas</a>
+    <a class="uk-button uk-button-default" href="#modal-center2" uk-toggle>Ver Reseñas</a>
         
         <!-- Insertar Reseñas -->
     <a class="uk-button uk-button-default" href="#modal-center3" uk-toggle>Agregar Reseña</a>
@@ -87,11 +87,9 @@
       <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical" id="modal-reco" >
         <div "uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider class="img-reco">
   
-      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m" >
+      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
           <!-- // Aca codigo de reseñas con el for -->
-
-
-            
+          
 
           <!------------------------------------------>
       </ul>
