buscador de usuarios parcial

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -64,7 +64,7 @@
           <form class="busc" action="/series/buscUser/" method="GET">
               <label for="">EMAIL / NOMBRE DE USUARIO</label>
               <br>
-              <input class = "users" type="text" name="email" value="" required>
+              <input class = "users" type="text" id= "searchUser" name="searchUser" value="" required>
               <input type=image src="/images/PAGINA6/usuario.png" width="17" name="" value="" class="busc-user">
               
           </form>
