--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -61,10 +61,10 @@
           <div class="titulo">
             <p>BUSCADOR DE USUARIOS</p>
           </div>
-          <form class="busc" action="/series/buscUser" method="GET">
+          <form class="busc" action="/series/buscUser" method="POST">
               <label for="">EMAIL / NOMBRE DE USUARIO</label>
               <br>
-              <input class = "users" type="text" name="email" value="" required>
+              <input class = "users" type="text" name="searchUser"  value="" required>
               <input type=image src="/images/PAGINA6/usuario.png" width="17" name="" value="" class="busc-user">
               
           </form>
