condicional en la vista de buscador de usuarios

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -66,7 +66,7 @@
               <br>
               <input class = "users" type="text" id= "searchUser" name="searchUser" value="" required>
               <input type=image src="/images/PAGINA6/usuario.png" width="17" name="" value="" class="busc-user">
-              
+        
           </form>
 
         </div>
@@ -75,16 +75,17 @@
 
     
     <section class="usuarios">
-
-      <% for (let i = 0; i < usuarios.length; i++) { %>
-            <li>
-              <a href="/series/detalle/<%=usuarios[i].id_usuario%>"> 
-                <%=usuarios[i].nombre_usuario%> <%=usuarios[i].apellido_usuario%>: <%=usuarios[i].email%> 
-              </a>
-            </li>
-      <% } %>
-
-
+ <% if (usuarios.length != 0) { %>     
+  <% for (let i = 0; i < usuarios.length; i++) { %>
+    <li>
+      <a href="/series/detalle/<%=usuarios[i].id_usuario%>"> 
+        <%=usuarios[i].nombre_usuario%> <%=usuarios[i].apellido_usuario%>: <%=usuarios[i].email%> 
+      </a>
+    </li>
+    <% } %> 
+<% } else { %> 
+  <p> No encontramos ningún usuario, perdon! </p>
+  <% } %> 
     </section>
 
     <!----------------------------------------------------------------------------------------------->
