--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -61,9 +61,10 @@
           <div class="titulo">
             <p>BUSCADOR DE USUARIOS</p>
           </div>
-          <form class="busc" action="/series/buscUser" method="POST">
+          <form class="busc" action="/series/buscUser" method="GET">
               <label for="">EMAIL / NOMBRE DE USUARIO</label>
               <br>
+              <input type="text" name="busqueda" value="true" hidden> 
               <input class = "users" type="text" name="searchUser"  value="" required>
               <input type=image src="/images/PAGINA6/usuario.png" width="17" name="" value="" class="busc-user">
         
@@ -83,7 +84,8 @@
       </a>
     </li>
     <% } %> 
-<% } else { %> 
+<% } else if(busqueda == "true")  { %> 
+
   <p> No encontramos ningún usuario, perdon! </p>
   <% } %> 
     </section>
