--- a/views/generos.ejs
+++ b/views/generos.ejs
@@ -40,6 +40,19 @@
           <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
           <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
           <li class="li-menu"><a class="li-black" href="/series/buscUser">Usuarios</a></li>
+          <ul class="li-menu uk-navbar-nav" uk-navbar="mode: click">
+            <li>
+                <a class="tituleres" href="#">Reseñas</a>
+                <div class="uk-navbar-dropdown">
+                    <ul class="uk-nav uk-navbar-dropdown-nav">
+                        <li class="uk-active li-menu"><a class="lasresenas" href="/series/mejoresResenas">Mejores Reseñas</a></li>
+                        <li class="uk-active li-menu"><a class="lasresenas"href="/series/peoresResenas">Peores Reseñas</a></li>
+                        <li class="uk-active li-menu"><a class="lasresenas"href="/series/recientesResenas">Reseñas más recientes</a></li>
+                    </ul>
+                </div>
+            </li>
+
+        </ul>
       </ul>
     </nav>
     <div class="elbuscador">
