genero a elegir por el usuario en el registro

--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -5,6 +5,7 @@
     <title>Movfly</title>
     <link rel="stylesheet" href="/stylesheets/StyleCaratula.css">
     <link rel="shortcut icon" href="/images/PAGINA0/logo.ico">
+    <script src="/javascripts/registro.js"></script>
   </head>
   <body>
     <div class="contenedor">
@@ -35,6 +36,11 @@
         <input class = "input_ingreso" type="date" name="fecha_nacimiento" required>
         <br>
 
+        <label class="text_regis">Género de serie favorito:</label>
+        <select class="input_ingreso" name="genero" id="contenedor-genero">
+  
+        </select>
+        
         <button type="submit" class="ingreso">REGISTRARSE</button>
 
     </form>
