--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -98,9 +98,9 @@
 
     <div id="modal-center2" class="uk-flex-top" uk-modal>
       <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical" id="modal-reco" >
-        <div "uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider class="img-reco">
+        <div "uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider class="img-reco" id="reseñasDetalle">
   
-      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
+      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m" >
           <!-- // Aca codigo de reseñas con el for -->
           
           <% for (let i = 0; i < resenas.length; i++) { %>
@@ -129,7 +129,9 @@
         <ul class="uk-slider-items ">
             <!-- -------- // Aca codigo de formulario con el for -------- -->
 
+        
             <form action="/series/guardado_resena" method="POST">
+           
               <input type="hidden" name="id_serie" value="<%=id_serie%>">
               <div>
                   <label for="" class="no_hover" >Email del usuario:</label>
