Hacer diseño responsive

--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -29,7 +29,7 @@
         <br>
 
         <label class="text_regis">Contraseña:</label>
-        <input class = "input_ingreso" type="password" name="contraseña" required>
+        <input class = "input_ingreso" type="password" name="contraseña" title="La contraseña debe contar con al menos 3 caracteres" required pattern=".{3,}">
         <br>
 
         <label class="text_regis">Fecha de nacimiento:</label>
