--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -26,9 +26,24 @@
     <div uk-dropdown>
         <ul class="uk-nav uk-dropdown-nav">
           <li class="li-menu"><a class="li-black" href="/series/inicio">Home</a></li>
-          <li class="li-menu"><a class="li-black" href="/series/generos"> Generos </a></li>
+          <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
-          <li class="li-menu"><a class="li-black" href="#flex2">Mi Cuenta</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/buscUser">Usuarios</a></li>
+
+          <ul class="li-menu uk-navbar-nav" uk-navbar="mode: click">
+            <li>
+                <a class="tituleres" href="#">Reseñas</a>
+                <div class="uk-navbar-dropdown">
+                    <ul class="uk-nav uk-navbar-dropdown-nav">
+                        <li class="uk-active li-menu"><a class="lasresenas" href="/series/mejoresResenas">Mejores Reseñas</a></li>
+                        <li class="uk-active li-menu"><a class="lasresenas"href="/series/peoresResenas">Peores Reseñas</a></li>
+                        <li class="uk-active li-menu"><a class="lasresenas"href="/series/recientesResenas">Reseñas más recientes</a></li>
+                    </ul>   
+              </div>   
+           </li> 
+          </ul>               
         </ul>
     </div>
   </nav>
