--- a/public/stylesheets/pagina1.css
+++ b/public/stylesheets/pagina1.css
@@ -562,9 +562,9 @@ footer h3 {
 
 /* Página de Ingreso */
 
-  form {
+  /*form {
       padding: 13%;
-    }
+    }*/
   
   .textos {
       font-size:1.5 em ;
