--- a/public/stylesheets/pagina1.css
+++ b/public/stylesheets/pagina1.css
@@ -208,9 +208,9 @@ list-style-type: none;
     color: white;*/
 }
 
-article.article-top5 a.link-serie {
+/*article.article-top5 a.link-serie {
 
-}
+}*/
 
 label {
   width: 100%;
