--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -529,4 +529,30 @@ ul li a.lasresenas{
   font-size: 91%;
   color: #ffac03;
   }
+
+
+  /* Aletas */
+
+  .contenedor form div.alerta{
+    display: flex;
+    flex-wrap: wrap;
+    width: 37%;
+    justify-content: center;
+    background-color: rgba(205, 92, 92,0.5);
+    height: 2em;
+    align-items: center;
+    border-radius: 41px;
+    font-family: PT Sans Narrow;
+    color: linen;
+  }
+
+  .contenedor form div.alerta p{
+    margin-right: 5%;
+  }
+
+  .contenedor div.alerta a:hover{
+    background-color: transparent;
+  }
+
+
   
