--- a/views/ingreso.ejs
+++ b/views/ingreso.ejs
@@ -12,6 +12,12 @@
     <!--  <h2>"Las mejores series para vos"</h2>
       <h3>B I E N V E N I D O</h3> -->
       <form action="/series/verificar" method="POST">
+        <% if (error) { %>
+          <div class="uk-alert-danger alerta" uk-alert>
+            <p> Email o contraseña incorrecta, intente de nuevo.</p>
+            <a class="uk-alert-close" uk-close></a>
+        </div>
+        <% } %>
         <label class = "textos">Email del usuario:</label>
         <input class = "input_ingreso" type="email" name="email" required>
         <br>
