--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -23,7 +23,7 @@
         </div>
         <% } %>
         <label class = "text_regis">Nombre del usuario:</label>
-        <input class = "input_ingreso" type="text" name="nombre_usuario" required minlength="3">
+        <input class = "input_ingreso" type="text" name="nombre_usuario" title="El nombre debe contar con al menos 3 caracteres" required pattern=".{3,}">
         <br>
 
         <label class = "text_regis">Apellido del usuario:</label>
