Extra: Genero favorito de usuario

--- a/views/detalle_user.ejs
+++ b/views/detalle_user.ejs
@@ -92,6 +92,9 @@
         <h1>Fecha de Nacimiento:</h1>
         <p><%=unUser.fecha_nacimiento%></p>
         <br>
+        <h1>Genero favorito:</h1>
+        <p><%=unUser.generos_fav%></p>
+        <br>
         <h1>Reseñas del Usuario: </h1>
         <ul>
           <% for (let i = 0; i < unUser.resenas.length; i++) { %>
