--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -43,7 +43,7 @@
         <br>
 
         <label class="text_regis">Género de serie favorito:</label>
-        <select class="input_ingreso" name="genero" id="contenedor-genero">
+        <select class="input_ingreso" name="generos_fav" id="contenedor-genero">
   
         </select>
         
