--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -128,10 +128,11 @@
   
       <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m" >
           <!-- // Aca codigo de reseñas con el for -->
-          
+
           <% for (let i = 0; i < resenas.length; i++) { %>
             <li>
-              Id Serie: <%=resenas[i].id_serie%> <br><%=resenas[i].texto_resena%> <br>Score: <%=resenas[i].puntaje_serie%> 
+              <%=resenas[i].usuario.nombre_usuario%> <%=resenas[i].usuario.apellido_usuario%> <br>
+              <%=resenas[i].texto_resena%> <br>Score: <%=resenas[i].puntaje_serie%> 
             </li>
         <% } %>
 
