--- a/public/stylesheets/pagina5.css
+++ b/public/stylesheets/pagina5.css
@@ -749,6 +749,7 @@ ul li a.lasresenas{
     justify-content: center;
     padding-left: 0;
     padding-right: 4%;
+  
 
   }
 
@@ -775,6 +776,16 @@ ul li a.lasresenas{
 
 #reseñasDetalle ul{
   width: 100%;
+  height: 15em;
+  align-items: inherit;
+}
+
+#reseñasDetalle ul p{
+  height: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 4.8%;
+  font-size: 4em;
 }
 
  /* Aletas */
