--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -139,7 +139,7 @@
         <% } %>
 
         <% } else{ %>
-          <p>No hay reseñas tdv, sé el primero!</p>
+          <p>No hay reseñas todavía, sé el primero!</p>
         <% } %>
 
           <!------------------------------------------>
