--- a/public/stylesheets/pagina5.css
+++ b/public/stylesheets/pagina5.css
@@ -692,6 +692,21 @@ font-size: 1.5em;
   margin: 2%;
   }
 
+  #detalle-usuario h3{
+    background-color: rgba(0, 0, 0,0.1);
+    width: 90%;
+    color: white;
+    font-family: PT Sans Narrow;
+    text-align: center;
+    font-size: 1.5em;
+    list-style-type: none;
+    margin: 2%;
+    padding: 0;
+    margin-top: 0%;
+    padding-left: 0;
+    margin-left: 0;
+  }
+
   #detalle-usuario ul{
     width: 100%;
     padding: 0;
